--- a/TheUsers.Data/TheUsers.Data.csproj
+++ b/TheUsers.Data/TheUsers.Data.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Data.SqlClient" Version="6.0.1" />
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.2" />
   </ItemGroup>
 
   <ItemGroup>
